Included Anton's comments

--- a/LatticeOptics/latticeOpticsv5/LatticeOpticsV5.bib
+++ b/LatticeOptics/latticeOpticsv5/LatticeOpticsV5.bib
@@ -2940,3 +2940,11 @@ url = {http://science.sciencemag.org/content/352/6293/1547},
 volume = {352},
 year = {2016}
 }
+
+@article{Chiu2018,
+author = {Chiu, Christie S. and Ji, Geoffrey and Mazurenko, Anton and Greif, Daniel and Greiner, Markus},
+journal = {Phys. Rev. Lett.},
+volume = {120},
+pages = {243201},
+year = {2018},
+}
